exlclude one file

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,5 @@ shap_cache/
 Data/*
 !Data/.gitkeep
 
+
+C:\Users\giusy\OneDrive\Desktop\AI_Healtcare\IMU-compensatory-movement-detection\LOSO_SHAP_best.py
